stratified-grammar.txt
expression ->   equality

equality -> comparison ( ( "==" | "!=" ) comparison )*

comparison -> term ( ( "<" | ">" | "<=" | ">=" ) term )*

term -> factor ( ( "+" | "-" ) factor )*

factor -> unary ( ( "*" | "/" ) unary )*

unary -> ( "!" | "-" ) unary | primary

primary ->  NUMBER | STRING | TRUE | FALSE | NULL | "(" expression ")" | IDENTIFIER
